# notion-wise

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: branch.yaml
docs/: conf.py  index.rst
src/: __init__.py  api.py  email.py  main.py  random_notes.py
tests/: test_hw.py
