[tool.poetry]
name = "notion-wise"
version = "0.1.0"
description = ""
authors = ["krishna-kumar456 <krishnaqmar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"
bandit = "^1.7.0"
safety = "^1.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
